--- a/style.css
+++ b/style.css
@@ -1,10 +1,70 @@
 *,
-*,
 html {
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: aquamarine;
+.container {}
+
+.container-navbar {
+    background-color: green;
+    width: 100%;
+    height: 10vh;
+}
+
+.ul-navbar {
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.li-navbar {
+    list-style: none;
+    padding: 10px;
+    margin: 5px;
+    color: white;
+    font-size: 20px;
+}
+
+.li-navbar:hover {
+    background-color: rgb(107, 218, 144);
+    transition: .3s ease-in-out;
+    transition-delay: .1s;
+    border-radius: 8px;
+}
+
+.li-navbar a {
+    color: white;
+    text-decoration: none;
+}
+
+.container-content {
+    background-color: rgb(107, 218, 144);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+.img-content {
+    width: 50%;
+    height: 100%;
+}
+
+.p-content {
+    margin: 5px;
+}
+
+.container-footer {
+    height: 10vh;
+    background-color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h2-content {
+    font-size: 20px;
+    color: white;
 }
